--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@
 /Finished sample/src/Marvin.IDP/obj
 /Finished sample/src/ImageGallery.Model
 /Finished sample/src/ImageGallery.Client/obj
+**/obj/**
+**/bin/**
+*.cache
+**/.vs/*
