--- a/Starter files/src/ImageGallery.API/Properties/launchSettings.json
+++ b/Starter files/src/ImageGallery.API/Properties/launchSettings.json
@@ -10,6 +10,7 @@
   "profiles": {
     "IIS Express": {
       "commandName": "Project",
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
@@ -17,8 +18,8 @@
     },
     "ImageGallery.API": {
       "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "http://localhost:5000",
+      "launchBrowser": false,
+      "launchUrl": "https://localhost:44366",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
