--- a/Starter files/src/ImageGallery.Client/Properties/launchSettings.json
+++ b/Starter files/src/ImageGallery.Client/Properties/launchSettings.json
@@ -9,17 +9,17 @@
   },
   "profiles": {
     "IIS Express": {
-      "commandName": "IISExpress",
+      "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "https://localhost:44389/",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:44389"
     },
     "ImageGallery.Client": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "http://localhost:5000",
+      "launchUrl": "https://localhost:44389",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
